--- a/force-app/main/default/lwc/skateCard/skateCard.html
+++ b/force-app/main/default/lwc/skateCard/skateCard.html
@@ -1,5 +1,5 @@
 <template>
-    <lightning-card icon-name="standard:apex_plugin">
+    <lightning-card>
         <template if:true={recordId}>
             <span slot="title">{productName}</span>
             <lightning-button-icon
